Make modernizr happy